자료실 글쓰기(업로드) 구현 리스트, 본문 및 첨부파일 출력

--- a/src/main/webapp/resources/css/board.css
+++ b/src/main/webapp/resources/css/board.css
@@ -6,6 +6,7 @@
 .cmtbg2 { background: lime; padding: 7px 0; }
 .pushright { float: right }
 .bdcsize { height: 550px; }
+.patxt { font-size: 10px }
 
 .table.table-ellipsis tbody td {
     max-width: 100px;
